Revert to Executors.newVirtualThreadPerTaskExecutor. Reduce the batch size speeds the process. Remove the thread sleep as don't work
Signed-off-by: cmoulliard <cmoulliard@redhat.com>